--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
   <div class="lead well">
     <div class="media">
-      <img class="mr-3" src=<%= asset_path('user') %> alt="Generic placeholder image" height="50px">
+      <img class="mr-3" src=<%= asset_path('user.png') %> alt="Generic placeholder image" height="50px">
       <div class="media-body">
         <h5 class="mt-0"><%= @question.email %> asked</h5>
         <%= @question.body %>
