--- a/app/views/home/_new_answer_form.html.erb
+++ b/app/views/home/_new_answer_form.html.erb
@@ -7,7 +7,7 @@
               <h4 class="modal-title" id="myModalLabel">New Answer</h4>
             </div>
             <div class="modal-body">
-            <%= form_for :answers, url:'/answers', html: {class: 'form-horizontal'} do %>
+            <%= form_for :answers, url:'/answers', html: {class: 'form-horizontal', :id => "modal-form"} do %>
             <input type="hidden" name="answer[question_id]" value="<%= @question.id %>" />
               <div class="form-group">
           <label for="inputEmail" class="col-sm-2 control-label">Email</label>
@@ -21,11 +21,12 @@
             <textarea class="form-control" name="answer[body]" id="inputAnswer" placeholder="What is your answer?" required></textarea>
           </div>
         </div>
-           </div> 
-            <div class="modal-footer">
+        <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" id="modal-form-submit" class="btn btn-primary">Submit</button>
             </div>
+           </div> 
+            
              <% end %>
           </div>
         </div>
