--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,17 +13,17 @@
       
       <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#new-answer-modal">Submit New Answer </button>
       <%= render 'home/new_answer_form' %>
-      <% @question.answers.each do |answer| %>
+      <% @answers.each do |answer| %>
       <div class="media">
         <img class="mr-3" src=<%= asset_path('user.png') %> alt="Generic placeholder image" height="50px">
         <div class="media-body">
           <h5 class="mt-0"><%= answer.email %> answered:</h5>
-          <div> <%= time_ago_in_words answer.created_at %></div>
+          <div> <%= time_ago_in_words answer.created_at %> ago</div>
           <%= truncate answer.body, length: 300 %>
         </div>
       </div>
       <% end %>
-      <% if @question.answers.empty? %>
+      <% if @answers.empty? %>
         <div class="alert alert-info">Nothing here yet. Be the first to answer.</div>
       <% end %>
       </div>
